--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,6 +67,7 @@ spring.datasource.filters=stat,wall,log4j
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 spring.datasource.useGlobalDataSourceStat=true
+spring.datasource.logSlowSql=true
 
 #未使用
 #druid.url=jdbc:mysql://127.0.0.1:3306/gaodev
@@ -77,6 +78,11 @@ spring.datasource.useGlobalDataSourceStat=true
 #druid.min-idle=1
 #druid.max-active=20
 #druid.test-on-borrow=true
+
+# mybatis
+#mybatis.typeAliasesPackage=com.gaodev.springbootstudy.entity
+#mybatis.mapperLocations=classpath:mapper/**/*.xml
+#mybatis.configuration.map-underscore-to-camel-case=true
 
 #未使用
 # Remote Applications
