--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,72 +4,71 @@ spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 server.port=8080
 
-#热部署生效
+
 spring.devtools.restart.enabled=true
-#设置重启的目录
 spring.devtools.restart.additional-paths=src/main/java
-#classpath目录下的WEB-INF文件夹内容修改不重启
+#classpath?
 spring.devtools.restart.exclude=WEB-INF/**
-# Logging changes in condition evaluation 记录条件评估中的更改
+# Logging changes in condition evaluation
 #spring.devtools.restart.log-condition-evaluation-delta=false
 
-#未使用
-# 静态资源热部署
-# Thymeleaf  模板
-#spring.thymeleaf.cache=false
-#  FreeMarker 模板
-#spring.freemarker.cache=false
-# Groovy 模板
+
+# ---------------------------------------------------Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+#\u70ED\u90E8\u7F72\u6587\u4EF6\uFF0C\u9875\u9762\u4E0D\u4EA7\u751F\u7F13\u5B58\uFF0C\u53CA\u65F6\u66F4\u65B0
+spring.thymeleaf.cache=false
+
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
+
+
+# Groovy
 #spring.groovy.template.cache=false
 
-#未使用
-spring.freemarker.template-loader-path=classpath:/templates
-spring.freemarker.cache=false
-spring.freemarker.charset=UTF-8
-spring.freemarker.check-template-location=true
-spring.freemarker.content-type=text/html
-spring.freemarker.expose-request-attributes=false
-spring.freemarker.expose-session-attributes=false
-spring.freemarker.request-context-attribute=request
-spring.freemarker.suffix=.ftl
+#  FreeMarker
+#spring.freemarker.template-loader-path=classpath:/templates
+#spring.freemarker.cache=false
+#spring.freemarker.charset=UTF-8
+#spring.freemarker.check-template-location=true
+#spring.freemarker.content-type=text/html
+#spring.freemarker.expose-request-attributes=false
+#spring.freemarker.expose-session-attributes=false
+#spring.freemarker.request-context-attribute=request
+#spring.freemarker.suffix=.ftl
 
-#未使用
 ### druid setting ###
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gaodev?allowMultiQueries=true&autoReconnect=true
 #spring.datasource.url=jdbc:mysql://ip:3306/jikefriend?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=
-### ??? 不支持的补充配置 ###
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-# 连接池的配置信息
-# 初始化大小，最小，最大
-spring.datasource.initialSize=5
-spring.datasource.minIdle=5
-spring.datasource.maxActive=20
+# spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.initialSize=5
+#spring.datasource.minIdle=5
+#spring.datasource.maxActive=20
+#spring.datasource.maxWait=60000
+#spring.datasource.timeBetweenEvictionRunsMillis=60000
+#spring.datasource.minEvictableIdleTimeMillis=300000
+#spring.datasource.validationQuery=SELECT 1 FROM DUAL
+#spring.datasource.testWhileIdle=true
+#spring.datasource.testOnBorrow=false
+#spring.datasource.testOnReturn=false
+#spring.datasource.poolPreparedStatements=true
+#spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+#spring.datasource.filters=stat,wall,log4j
+#spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+#spring.datasource.useGlobalDataSourceStat=true
+#spring.datasource.logSlowSql=true
 
-# 配置获取连接等待超时的时间
-spring.datasource.maxWait=60000
-# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-# 配置一个连接在池中最小生存的时间，单位是毫秒
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-# 打开PSCache，并且指定每个连接上PSCache的大小
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-spring.datasource.filters=stat,wall,log4j
-# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-spring.datasource.useGlobalDataSourceStat=true
-spring.datasource.logSlowSql=true
 
-#未使用
 #druid.url=jdbc:mysql://127.0.0.1:3306/gaodev
 #druid.driver-class=com.mysql.jdbc.Driver
 #druid.username=root
@@ -84,33 +83,32 @@ spring.datasource.logSlowSql=true
 #mybatis.mapperLocations=classpath:mapper/**/*.xml
 #mybatis.configuration.map-underscore-to-camel-case=true
 
-#未使用
+
 # Remote Applications
 #spring.devtools.remote.secret=mysecret
 #spring.devtools.remote.proxy.host=
 #spring.devtools.remote.proxy.port=
 
-#未使用
-#分页插件配置
+# -----------------------------------------------------pagehelper
 #pagehelper.helperDialect=mysql
 #pagehelper.reasonable=true
 #pagehelper.supportMethodsArguments=true
 #pagehelper.params=count=countSql
 #pagehelper.page-size-zero=true
 
-#redis
+#----------------------------------------------------redis
 #spring.redis.host=127.0.0.1
 #spring.redis.port=6379
 #spring.redis.timeout=0
 #spring.redis.password=
 
-#rabbitmq
+#------------------------------------------------------rabbitmq
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=
 #spring.rabbitmq.password=
 
-#邮件配置
+# ---------------------------------------------------mail
 #spring.mail.protocol=smtp
 #spring.mail.host=smtp.xxx.app
 #spring.mail.port=25
@@ -120,7 +118,7 @@ spring.datasource.logSlowSql=true
 #spring.mail.username=
 #spring.mail.password=
 
-#log4j
+#--------------------------------------------------------------------------log4j
 #log4j.rootCategory=INFO, stdout
 #log4j.rootLogger=info, stdout
 #### stdout ###
@@ -134,3 +132,19 @@ spring.datasource.logSlowSql=true
 #log4j.logger.org.apache.commons.digester.Digester=info
 #log4j.logger.org.apache.catalina.startup.TldConfig=info
 #log4j.logger.chb.test=debug
+
+
+# ----------------------------------------------------WeChat
+#APP
+wechatpay.user.app.app_id=123123
+wechatpay.user.app.merchant_id=erwerwer
+wechatpay.user.app.key=erwerwer
+wechatpay.user.app.notify_url=erwerwer
+wechatpay.user.app.device_info=erwerwer
+
+# \u5C0F\u7A0B\u5E8F
+wechatpay.user.xcx.app_id=123123
+wechatpay.user.xcx.merchant_id=erwerwer
+wechatpay.user.xcx.key=erwerwer
+wechatpay.user.xcx.notify_url=erwerwer
+wechatpay.user.xcx.device_info=erwerwer
