--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
+# 是否强制对http请求和响应进行编码，默认为true
 spring.http.encoding.force=true
+# 指定http请求和相应的Charset，默认: UTF-8
 spring.http.encoding.charset=UTF-8
+# 是否开启http的编码支持，默认为true
 spring.http.encoding.enabled=true
+
+# spring.http.converters.preferred-json-mapper是否优先使用JSON mapper来转换.
+# spring.hateoas.apply-to-primary-object-mapper设定是否对object mapper也支持HATEOAS，默认为: true
+
 server.tomcat.uri-encoding=UTF-8
 server.port=8080
 
@@ -14,15 +21,32 @@ spring.devtools.restart.exclude=WEB-INF/**
 
 
 # ---------------------------------------------------Thymeleaf
+# 指定模板的前缀，默认为:classpath:/templates/
 spring.thymeleaf.prefix=classpath:/templates/
+
+# 指定模板的后缀，默认为:.html
 spring.thymeleaf.suffix=.html
+
+# 指定模板的模式，具体查看StandardTemplateModeHandlers，默认为: HTML5
 spring.thymeleaf.mode=HTML5
 #spring.thymeleaf.mode=LEGACYHTML5
+
+# 指定模板的编码，默认为: UTF-8
 spring.thymeleaf.encoding=UTF-8
+
+#指定Content-Type，默认为: text/html
 spring.thymeleaf.servlet.content-type=text/html
-#\u70ED\u90E8\u7F72\u6587\u4EF6\uFF0C\u9875\u9762\u4E0D\u4EA7\u751F\u7F13\u5B58\uFF0C\u53CA\u65F6\u66F4\u65B0
+# 是否开启模板缓存，默认true
 spring.thymeleaf.cache=false
 
+# spring.thymeleaf.check-template-location 是否检查模板路径是否存在，默认true
+# spring.thymeleaf.template-resolver-order指定模板的解析顺序，默认为第一个.
+# spring.thymeleaf.view-names指定使用模板的视图名，多个以逗号分隔.
+
+
+# spring.thymeleaf.excluded-view-names指定不使用模板的视图名称，多个以逗号分隔.
+# 是否开启内容版本策略，默认为false
+# 指定要应用的版本的路径，多个以逗号分隔，默认为:[/**]
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
@@ -95,6 +119,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #pagehelper.supportMethodsArguments=true
 #pagehelper.params=count=countSql
 #pagehelper.page-size-zero=true
+#pagehelper.offset-as-page-num=true
 
 #----------------------------------------------------redis
 #spring.redis.host=127.0.0.1
@@ -133,6 +158,17 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #log4j.logger.org.apache.catalina.startup.TldConfig=info
 #log4j.logger.chb.test=debug
 
+
+
+# ----------------------------------------------------management
+management:
+    endpoints:
+        web:
+            exposure:
+                include: "*"
+    endpoint:
+        health:
+            show-details: always
 
 # ----------------------------------------------------WeChat
 #APP
